feat: add is scheduled column in the jobs table and feed it. (#14958)